switched to new (free) template (reflux), updated content, figs, etc, accordingly

--- a/about.html
+++ b/about.html
@@ -1,61 +1,209 @@
-<h1> About Me </h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
+      rel="stylesheet"
+    />
 
-<p>Hello! My name is Sophia. I started my astronomy career as a physics major in
-college. I loved quantum mechanics, thermodynamics, and statistics. When I first
-got to see a rest-frame optical AGN emission spectrum as an undergrad, I asked
-question after question about emission mechanisms, line profiles, and nebular
-astrophysics. My curiosity was, and still is, insatiable. I had to learn more.</p>
+    <title>Sophia Flury</title>
+<!--
+Reflux Template
+https://templatemo.com/tm-531-reflux
+-->
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
-<p>The Journey was not easy. I tried three separate times to get into an astronomy
-PhD program before I was waitlisted at UMass. I did a Master's program, worked
-in planetary science, and wrote my first publication in my efforts to progress
-to the next level. I discovered many barriers to entry for people like me --
-transgender, mental health, socioeconomic. As a result, I have developed a deep
-empathy for others and an active dedication to diversity, equity, and belonging.</p>
+    <!-- Additional CSS Files -->
+    <link rel="stylesheet" href="assets/css/fontawesome.css" />
+    <link rel="stylesheet" href="assets/css/templatemo-style.css" />
+    <link rel="stylesheet" href="assets/css/owl.css" />
+    <link rel="stylesheet" href="assets/css/lightbox.css" />
+  </head>
 
-<p>My PhD experience was heavily impacted by the COVID19 pandemic. Courses and
-research were fully remote, which forced me to develop my independence as a
-worker, thinker, researcher, and scientist far earlier than otherwise might have
-been expected. But my work with the LzLCS has opened up a wider, international
-astronomical community to me. I have grown not just in my technical prowess but
-also in my appreciation for the bigger picture, the global scale of our small
-but rigorous field.</p>
+  <body>
+    <div id="page-wraper">
+      <!-- Sidebar Menu -->
+      <div class="responsive-nav">
+        <i class="fa fa-bars" id="menu-toggle"></i>
+        <div id="menu" class="menu">
+          <i class="fa fa-times" id="menu-close"></i>
+          <div class="container">
+            <div class="image">
+              <a href="#"><img src="assets/images/author-image.png" alt="" /></a>
+            </div>
+            <div class="author-content">
+              <h4>Sophia Flury</h4>
+              <span>Astronomer<br>PhD candidate<br>UMass Amherst</span>
+            </div>
+            <nav class="main-nav" role="navigation">
+              <ul>
+                <li><a href="./index.html">Research</a></li>
+                <li><a href="./teaching.html">Teaching</a></li>
+                <li><a href="./about.html">Outside Astronomy</a></li>
+                <li><a href="./cv.pdf">CV</a></li>
+              </ul>
+            </nav>
 
-<h3> Non-Astronomy Interests </h3>
+            <div class="copyright-text">
+              <p>Copyright 2019 Reflux Design<br>
+              Background image credit <a href=https://webbtelescope.org/contents/media/images/2023/101/01GNYHXG26ZPW9DW7KTXQH116G?Category=03-galaxies&Category=04-nebulas&itemsPerPage=100&page=1>
+              NASA/ESA/USRA/STScI</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
 
-<p> I read. Voraciously. Recent compelling books include
-  "East of Eden" by Steinbeck,
-  "The Things They Carried" by Tim O'Brien, and
-  "The Book of Strange New Things" by Michael Faber.
-</p>
+      <section class="section research" data-section="research">
+        <div class="container">
+          <div class="section-heading">
+            <h2>About Me</h2>
+            <div class="line-dec"></div>
+            <span
+              >
+              <p>Welcome! My name is Sophia. I started my astronomy career as a physics major in
+              college. I loved quantum mechanics, thermodynamics, and statistics. When I first
+              got to see a rest-frame optical AGN emission spectrum as an undergrad, I asked
+              question after question about emission mechanisms, line profiles, and nebular
+              astrophysics. My curiosity was, and still is, insatiable. I had to learn more.</p>
 
-<p> I bake bread. This was not part of the pandemic bread-baking craze. I simply
-love the feeling of kneading dough, of seeing various pre-ferments and
-combinations of yeast, flour, salt, and water produce such wonderfully different
-flavors and textures. Favorites to bake include focaccia and pain de compagne.
-</p>
+              <p>The Journey was not easy. I tried three separate times to get into an astronomy
+              PhD program before I was waitlisted at UMass. I did a Master's program, worked
+              in planetary science, and wrote my first publication in my efforts to progress
+              to the next level. I discovered many barriers to entry for people like me --
+              transgender, mental health, socioeconomic. As a result, I have developed a deep
+              empathy for others and an active dedication to diversity, equity, and belonging.</p>
 
-<p> I have three cats. They are doofuses. I love them. </p>
+              <p>My PhD experience was heavily impacted by the COVID19 pandemic. Courses and
+              research were fully remote, which forced me to develop my independence as a
+              worker, thinker, researcher, and scientist far earlier than otherwise might have
+              been expected. But my work with mentors and collaborators has opened up the wider 
+              astronomical community to me. I have grown not just in my technical prowess but
+              also in my appreciation for the bigger picture, the global scope of our small field.</p>
+              </span
+            >
+          </div>
+          <div class="line-dec"></div>
+            <h2>Some Non-Astronomy Interests</h2>
+          <div class="line-dec"></div>
 
-<p> I am part of a diverse community of local fiber artists (knitting, tatting,
-crotchet, quilting, spinning, etc). I do the fiber art of embroidery. It is
-tedious but soothing.</p>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="service-item">
+                <div class="first-service-icon service-icon"></div>
+                <h4>Reading</h4>
+                <p>
+                  I read. Voraciously. Recent compelling books include
+                    "East of Eden" by Steinbeck,
+                    "The Things They Carried" by Tim O'Brien, and
+                    "The Book of Strange New Things" by Michael Faber.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="service-item">
+                <div class="second-service-icon service-icon"></div>
+                <h4>Bread</h4>
+                <p>
+                  I bake bread. I enjoy the feeling of kneading dough, of seeing various pre-ferments and
+                  combinations of yeast, flour, salt, and water produce such wonderfully different
+                  flavors and textures. Favorites to bake include focaccia and pain de compagne.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="service-item">
+                <div class="third-service-icon service-icon"></div>
+                <h4>Board Games</h4>
+                <p>
+                  I enjoy the combined problem solving and social elements of tabletop board games.
+                  Current games I am into include "Settlers of Catan", "Terraforming Mars", and "Wingspan".
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="service-item">
+                <div class="fourth-service-icon service-icon"></div>
+                <h4>Music</h4>
+                <p>
+                  I play classical piano. Pieces I am currently
+                  learning/finessing include
+                  "Rhapsody on a Theme of Paganini" by Rachmaninoff,
+                  "Nocturne in C# Minor" by Chopin,
+                  "1st Arabesque" by Debussy, and
+                  "1st Gymnopedie" by Satie.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-<p> I play classical piano. Pieces I am learning/finessing include
-"Rhapsody on a Theme of Paganini" - Rachmaninoff,
-"Nocturne in C# Minor" - Chopin,
-"1st Arabesque" - Debussy,
-"1st Gymnopedie" - Satie.
-</p>
+    <!-- Scripts -->
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-<p> My best friend got me into board games when we were kids. It's a great way
-to problem solve, cooperatively or competitively, learn new ways to think about
-systems with different rules, develop teamwork skills, learn to embrace setbakcs
-and losses, and to build social connections and community. Current games I am
-into include "Settlers of Catan", "Terraforming Mars", and "Wingspan".</p>
+    <script src="assets/js/isotope.min.js"></script>
+    <script src="assets/js/owl-carousel.js"></script>
+    <script src="assets/js/lightbox.js"></script>
+    <script src="assets/js/custom.js"></script>
+    <script>
+      //according to loftblog tut
+      $(".main-menu li:first").addClass("active");
 
-<ul>
-<li><a href="https://sflury.github.io/index.html">Home</a></li>
-<li><a href="https://sflury.github.io/research.html">Research</a></li>
-<li><a href="https://sflury.github.io/teaching.html">Teaching</a></li>
-</ul>
+      var showSection = function showSection(section, isAnimate) {
+        var direction = section.replace(/#/, ""),
+          reqSection = $(".section").filter(
+            '[data-section="' + direction + '"]'
+          ),
+          reqSectionPos = reqSection.offset().top - 0;
+
+        if (isAnimate) {
+          $("body, html").animate(
+            {
+              scrollTop: reqSectionPos
+            },
+            800
+          );
+        } else {
+          $("body, html").scrollTop(reqSectionPos);
+        }
+      };
+
+      var checkSection = function checkSection() {
+        $(".section").each(function() {
+          var $this = $(this),
+            topEdge = $this.offset().top - 80,
+            bottomEdge = topEdge + $this.height(),
+            wScroll = $(window).scrollTop();
+          if (topEdge < wScroll && bottomEdge > wScroll) {
+            var currentId = $this.data("section"),
+              reqLink = $("a").filter("[href*=\\#" + currentId + "]");
+            reqLink
+              .closest("li")
+              .addClass("active")
+              .siblings()
+              .removeClass("active");
+          }
+        });
+      };
+
+      $(".main-menu").on("click", "a", function(e) {
+        e.preventDefault();
+        showSection($(this).attr("href"), true);
+      });
+
+      $(window).scroll(function() {
+        checkSection();
+      });
+    </script>
+  </body>
+</html>
