--- a/index.html
+++ b/index.html
@@ -1,10 +1,225 @@
-<h1>Sophia Flury</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
+      rel="stylesheet"
+    />
 
-<p>My name is Sophia Flury. I am currently a PhD candidate at the University of
-Massachusets, where I study and conduct research in Astronomy.</p>
+    <title>Sophia Flury</title>
+<!--
+Reflux Template
+https://templatemo.com/tm-531-reflux
+-->
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
-<ul>
-<li><a href="https://sflury.github.io/about.html">About</a></li>
-<li><a href="https://sflury.github.io/research.html">Research</a></li>
-<li><a href="https://sflury.github.io/teaching.html">Teaching</a></li>
-</ul>
+    <!-- Additional CSS Files -->
+    <link rel="stylesheet" href="assets/css/fontawesome.css" />
+    <link rel="stylesheet" href="assets/css/templatemo-style.css" />
+    <link rel="stylesheet" href="assets/css/owl.css" />
+    <link rel="stylesheet" href="assets/css/lightbox.css" />
+  </head>
+
+  <body>
+    <div id="page-wraper">
+      <!-- Sidebar Menu -->
+      <div class="responsive-nav">
+        <i class="fa fa-bars" id="menu-toggle"></i>
+        <div id="menu" class="menu">
+          <i class="fa fa-times" id="menu-close"></i>
+          <div class="container">
+            <div class="image">
+              <a href="#"><img src="assets/images/author-image.png" alt="" /></a>
+            </div>
+            <div class="author-content">
+              <h4>Sophia Flury</h4>
+              <span>Astronomer<br>PhD candidate<br>UMass Amherst</span>
+            </div>
+            <nav class="main-nav" role="navigation">
+              <ul>
+                <li><a href="./index.html">Research</a></li>
+                <li><a href="./teaching.html">Teaching</a></li>
+                <li><a href="./about.html">Outside Astronomy</a></li>
+                <li><a href="./cv.pdf">CV</a></li>
+              </ul>
+            </nav>
+
+            <div class="copyright-text">
+              <p>Copyright 2019 Reflux Design<br>
+              Background image credit <a href=https://webbtelescope.org/contents/media/images/2023/101/01GNYHXG26ZPW9DW7KTXQH116G?Category=03-galaxies&Category=04-nebulas&itemsPerPage=100&page=1>
+              NASA/ESA/USRA/STScI</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <section class="section research" data-section="research">
+        <div class="container">
+          <div class="section-heading">
+            <h2>Research</h2>
+            <div class="line-dec"></div>
+            <span
+              >
+              My research interests focus on the use of spectroscopy to investigate
+              the relationship between a galaxy's ISM and energetic phenomena such as young
+              stellar populations and AGN. I use rest-frame UV and optical spectroscopy from
+              JWST, HST, the SDSS, and other facilities to study line-emitting gas in local
+              (z<0.5) galaxies. Much of my analysis incorporates nebular diagnostics,
+              photoionization models, and stellar population synthesis to infer fundamental
+              properties of the ISM, stars, ionizing radiation, and ionized gas kinematics in
+              other galaxies. Currently, I work with faculty at
+              multiple institutions, which has given me the opportunity for extensive
+              collaboration with astronomers across the world.<br><br>Below, you can read about some
+              specific projects on which I am actively working. A list of my recent publications
+              can be found on the <a href=https://ui.adsabs.harvard.edu/search/q=docs(library%2F4YGg7Pm5TVOXW659qG2YPw)&sort=date%20desc%2C%20bibcode%20desc&p_=0>NASA ADS/ABS</a>
+              </span
+            >
+          </div>
+          <div class="left-image-post">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="left-image">
+                  <img src="assets/images/fescO32.png" alt="" />
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="right-text">
+                  <h4>Lyman Continuum Escape</h4>
+                  <p>
+                    With <a href="https://astronomy.williams.edu/profile/08aej/">Anne Jaskot</a>
+                    (Williams College), I am using a combination of
+                    UV spectroscopy with HST/COS
+                    (the <a href="https://ui.adsabs.harvard.edu/abs/2022ApJS..260....1F/abstract">LzLCS</a>,
+                    <a href="https://archive.stsci.edu/proposal_search.php?mission=hst&id=15626">GO 15626</a>) and optical spectroscopy with
+                    SDSS to investigate the production and escape of ionizing photons in z~0.3
+                    low-mass star-forming galaxies. The LzLCS has fundamentally changed our
+                    understanding of the origins of cosmic reionization by providing a foundational
+                    reference sample spanning a very wide parameter space, allowing us to test Lyman
+                    continuum diagnostics and to investigate the underlying mechanisms of ionizing
+                    photon escape.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="right-image-post">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="left-text">
+                  <h4>AGN and Star Formation in Low-mass Galaxies</h4>
+                  <p>
+                    With <a href="https://www.wesleyan.edu/academics/faculty/emoran/profile.html">Ed Moran</a> (Wesleyan University), I am using IFU,
+                    SDSS, and long-slit spectroscopy to investigate the relationships between AGN,
+                    star formation, and their host galaxies by analyzing the nebular emission line
+                    properties, including flux ratio diagnostics like the BPT, nebular diagnostics,
+                    and line profile shapes. I use many tools in this analysis, including as PyNeb,
+                    MAPPINGS, and CLOUDY, and my own line profile model.
+                    With Ed, I also mentor Master's students and
+                    directly assist with their final thesis projects.
+                  </p>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="right-image">
+                  <img src="assets/images/outflowO3.png" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="left-image-post">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="left-image">
+                <img src="assets/images/LowMassSat.png" alt="" />
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="right-text">
+                <h4>Activity in Low-Mass Stars</h4>
+                <p>
+                  Inspired by a graduate course the astrophysics of stellar
+                  interiors, I started a research group to investigate and develop novel
+                  diagnostics of the dynamos and structure of low mass (< 1 Msun) stars using
+                  Gaia, 2MASS, Kepler, and TESS photometry. I work with two other PhD candidates,
+                  <a href="https://www.umass.edu/astronomy/people/graduate-student/sandra-bustamante">Sandra Bustamante</a> (UMass)
+                  and <a href="https://physics.dartmouth.edu/people/aylin-garcia-soto">Aylin Garcia Soto</a> (Dartmouth), as well as
+                  rising graduate student <a href="https://www.linkedin.com/in/chase-alvarado-anderson-7792491a7/">Chase Alvarado-Anderson</a> (Stanford).
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <!-- Scripts -->
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <script src="assets/js/isotope.min.js"></script>
+    <script src="assets/js/owl-carousel.js"></script>
+    <script src="assets/js/lightbox.js"></script>
+    <script src="assets/js/custom.js"></script>
+    <script>
+      //according to loftblog tut
+      $(".main-menu li:first").addClass("active");
+
+      var showSection = function showSection(section, isAnimate) {
+        var direction = section.replace(/#/, ""),
+          reqSection = $(".section").filter(
+            '[data-section="' + direction + '"]'
+          ),
+          reqSectionPos = reqSection.offset().top - 0;
+
+        if (isAnimate) {
+          $("body, html").animate(
+            {
+              scrollTop: reqSectionPos
+            },
+            800
+          );
+        } else {
+          $("body, html").scrollTop(reqSectionPos);
+        }
+      };
+
+      var checkSection = function checkSection() {
+        $(".section").each(function() {
+          var $this = $(this),
+            topEdge = $this.offset().top - 80,
+            bottomEdge = topEdge + $this.height(),
+            wScroll = $(window).scrollTop();
+          if (topEdge < wScroll && bottomEdge > wScroll) {
+            var currentId = $this.data("section"),
+              reqLink = $("a").filter("[href*=\\#" + currentId + "]");
+            reqLink
+              .closest("li")
+              .addClass("active")
+              .siblings()
+              .removeClass("active");
+          }
+        });
+      };
+
+      $(".main-menu").on("click", "a", function(e) {
+        e.preventDefault();
+        showSection($(this).attr("href"), true);
+      });
+
+      $(window).scroll(function() {
+        checkSection();
+      });
+    </script>
+  </body>
+</html>
