--- a/teaching.html
+++ b/teaching.html
@@ -1,24 +1,165 @@
-<h1> Teaching </h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
+      rel="stylesheet"
+    />
 
-<p>I have experience with a variety of introductory astronomy classes both for
-majors and for non-majors. My most extensive TA work involved developing and
-teaching observational astronomy labs involving the use of python and
-numerical methods. These labs focused on developing specific technical skills
-in python for solving problems in data analysis and modeling, particularly in
-the use of linear algebra, convergence tests, boundary and initial value
-problems, modular design, array management, and image processing.</p>
+    <title>Sophia Flury</title>
+<!--
+Reflux Template
+https://templatemo.com/tm-531-reflux
+-->
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
-<p>To illustrate the exercises I developed for my students, here is a zoom-in on the
-fractal produced from the Mandelbrot set. I had students write functions to test
-the Mandelbrot set for divergence over a grid of input values and map the test
-results into an image like the one shown here. The skills they developed here
-were then directly applied to manual data reduction of raw images they recorded
-on a CCD mounted on a 17 inch reflector.</p>
+    <!-- Additional CSS Files -->
+    <link rel="stylesheet" href="assets/css/fontawesome.css" />
+    <link rel="stylesheet" href="assets/css/templatemo-style.css" />
+    <link rel="stylesheet" href="assets/css/owl.css" />
+    <link rel="stylesheet" href="assets/css/lightbox.css" />
+  </head>
 
-<img src="https://sflury.github.io/img/mandelbrot.png" alt="Mandelbrot zoom-in">
+  <body>
+    <div id="page-wraper">
+      <!-- Sidebar Menu -->
+      <div class="responsive-nav">
+        <i class="fa fa-bars" id="menu-toggle"></i>
+        <div id="menu" class="menu">
+          <i class="fa fa-times" id="menu-close"></i>
+          <div class="container">
+            <div class="image">
+              <a href="#"><img src="assets/images/author-image.png" alt="" /></a>
+            </div>
+            <div class="author-content">
+              <h4>Sophia Flury</h4>
+              <span>Astronomer<br>PhD candidate, University of
+              Massachusets</span>
+            </div>
+            <nav class="main-nav" role="navigation">
+              <ul>
+                <li><a href="./index.html">Research</a></li>
+                <li><a href="./teaching.html">Teaching</a></li>
+                <li><a href="./about.html">Outside Astronomy</a></li>
+                <li><a href="./cv.pdf">CV</a></li>
+              </ul>
+            </nav>
 
-<ul>
-<li><a href="https://sflury.github.io/index.html">Home</a></li>
-<li><a href="https://sflury.github.io/about.html">About</a></li>
-<li><a href="https://sflury.github.io/research.html">Research</a></li>
-</ul>
+            <div class="copyright-text">
+              <p>Copyright 2019 Reflux Design<br>
+              Background image credit <a href=https://webbtelescope.org/contents/media/images/2023/101/01GNYHXG26ZPW9DW7KTXQH116G?Category=03-galaxies&Category=04-nebulas&itemsPerPage=100&page=1>
+              NASA/ESA/USRA/STScI</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <section class="section teaching">
+        <div class="container">
+          <div class="section-heading">
+            <h2>Teaching</h2>
+            <div class="line-dec"></div>
+            <span
+              >
+              I have experience with a variety of introductory astronomy classes both for
+              majors and for non-majors. My most extensive TA work involved developing and
+              teaching observational astronomy labs involving the use of python and
+              numerical methods. These labs focused on developing specific technical skills
+              in python for solving problems in data analysis and modeling, particularly in
+              the use of linear algebra, convergence tests, boundary and initial value
+              problems, modular design, array management, and image processing.
+              </span
+            >
+          </div>
+          <div class="left-image-post">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="left-image">
+                  <img src="assets/images/mandelbrot.png" alt="" />
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="right-text">
+                  <h4>Fractal Visualization</h4>
+                  <p>
+                    To illustrate the exercises I developed for my students, here is a zoom-in on the
+                    fractal produced from the Mandelbrot set. I had students write functions to test
+                    the Mandelbrot set for divergence over a grid of input values and map the test
+                    results into an image like the one shown here. The skills they developed here
+                    were then directly applied to manual data reduction of raw images they recorded
+                    on a CCD mounted on a 17 inch reflector.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+    <!-- Scripts -->
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <script src="assets/js/isotope.min.js"></script>
+    <script src="assets/js/owl-carousel.js"></script>
+    <script src="assets/js/lightbox.js"></script>
+    <script src="assets/js/custom.js"></script>
+    <script>
+      //according to loftblog tut
+      $(".main-menu li:first").addClass("active");
+
+      var showSection = function showSection(section, isAnimate) {
+        var direction = section.replace(/#/, ""),
+          reqSection = $(".section").filter(
+            '[data-section="' + direction + '"]'
+          ),
+          reqSectionPos = reqSection.offset().top - 0;
+
+        if (isAnimate) {
+          $("body, html").animate(
+            {
+              scrollTop: reqSectionPos
+            },
+            800
+          );
+        } else {
+          $("body, html").scrollTop(reqSectionPos);
+        }
+      };
+
+      var checkSection = function checkSection() {
+        $(".section").each(function() {
+          var $this = $(this),
+            topEdge = $this.offset().top - 80,
+            bottomEdge = topEdge + $this.height(),
+            wScroll = $(window).scrollTop();
+          if (topEdge < wScroll && bottomEdge > wScroll) {
+            var currentId = $this.data("section"),
+              reqLink = $("a").filter("[href*=\\#" + currentId + "]");
+            reqLink
+              .closest("li")
+              .addClass("active")
+              .siblings()
+              .removeClass("active");
+          }
+        });
+      };
+
+      $(".main-menu").on("click", "a", function(e) {
+        e.preventDefault();
+        showSection($(this).attr("href"), true);
+      });
+
+      $(window).scroll(function() {
+        checkSection();
+      });
+    </script>
+  </body>
+</html>
