updated links, buttons, added CV

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@ https://templatemo.com/tm-531-reflux
                 <li><a href="./index.html">Research</a></li>
                 <li><a href="./teaching.html">Teaching</a></li>
                 <li><a href="./about.html">Outside Astronomy</a></li>
-                <li><a href="./cv.pdf">CV</a></li>
+                <li><a href="./cv.html">CV</a></li>
               </ul>
             </nav>
 
@@ -84,7 +84,7 @@ https://templatemo.com/tm-531-reflux
               <p>My PhD experience was heavily impacted by the COVID19 pandemic. Courses and
               research were fully remote, which forced me to develop my independence as a
               worker, thinker, researcher, and scientist far earlier than otherwise might have
-              been expected. But my work with mentors and collaborators has opened up the wider 
+              been expected. But my work with mentors and collaborators has opened up the wider
               astronomical community to me. I have grown not just in my technical prowess but
               also in my appreciation for the bigger picture, the global scope of our small field.</p>
               </span
