updated "about" link

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@ https://templatemo.com/tm-531-reflux
               <ul>
                 <li><a href="./index.html">Research</a></li>
                 <li><a href="./teaching.html">Teaching</a></li>
-                <li><a href="./about.html">Outside Astronomy</a></li>
+                <li><a href="./about.html">About Me</a></li>
                 <li><a href="./cv.html">CV</a></li>
               </ul>
             </nav>
