added figure references

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ https://templatemo.com/tm-531-reflux
                     low-mass star-forming galaxies. The LzLCS has fundamentally changed our
                     understanding of the origins of cosmic reionization by providing a foundational
                     reference sample spanning a very wide parameter space, allowing us to test Lyman
-                    continuum diagnostics and to investigate the underlying mechanisms of ionizing
-                    photon escape.
+                    continuum diagnostics (like O32 as shown on the left) and to investigate the
+                    underlying mechanisms of ionizing photon escape.
                   </p>
                 </div>
               </div>
@@ -120,8 +120,10 @@ https://templatemo.com/tm-531-reflux
                     SDSS, and long-slit spectroscopy to investigate the relationships between AGN,
                     star formation, and their host galaxies by analyzing the nebular emission line
                     properties, including flux ratio diagnostics like the BPT, nebular diagnostics,
-                    and line profile shapes. I use many tools in this analysis, including as PyNeb,
-                    MAPPINGS, and CLOUDY, and my own line profile model.
+                    and line profile shapes. I use many tools in these analyses, including PyNeb,
+                    MAPPINGS, CLOUDY, and a variety of numerical methods.
+                    To the right, I depict my own line profile model for galactic outflows as traced
+                    by the [O III] 5007 nebular emission line.<br>
                     With Ed, I also mentor Master's students and
                     directly assist with their final thesis projects.
                   </p>
@@ -154,6 +156,9 @@ https://templatemo.com/tm-531-reflux
                   <a href="https://www.umass.edu/astronomy/people/graduate-student/sandra-bustamante">Sandra Bustamante</a> (UMass)
                   and <a href="https://physics.dartmouth.edu/people/aylin-garcia-soto">Aylin Garcia Soto</a> (Dartmouth), as well as
                   rising graduate student <a href="https://www.linkedin.com/in/chase-alvarado-anderson-7792491a7/">Chase Alvarado-Anderson</a> (Stanford).
+                  On the left, I show a variety of stellar activity indicators as a
+                  function of the Rossby number Ro = rotation period / convective cycle time
+                  to illustrate the empirical relationship between stellar structure, dynamos, and activity.
                 </p>
               </div>
             </div>
