updates copyright and CSS template, enlarged PDF viewer

--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@ https://templatemo.com/tm-531-reflux
             </nav>
 
             <div class="copyright-text">
-              <p>Copyright 2019 Reflux Design<br>
-              Background image credit <a href=https://webbtelescope.org/contents/media/images/2023/101/01GNYHXG26ZPW9DW7KTXQH116G?Category=03-galaxies&Category=04-nebulas&itemsPerPage=100&page=1>
-              NASA/ESA/USRA/STScI</a></p>
+              <p>template &copy 2019 Reflux Design<br>
+              background by <a href=https://webbtelescope.org/contents/media/images/2023/101/01GNYHXG26ZPW9DW7KTXQH116G?Category=03-galaxies&Category=04-nebulas&itemsPerPage=100&page=1>
+              NASA/ESA/USRA/STScI</a><br>
+              all other content &copy Sophia Flury 2023
+            </p>
             </div>
           </div>
         </div>
