--- a/index.html
+++ b/index.html
@@ -166,6 +166,32 @@ https://templatemo.com/tm-531-reflux
             </div>
           </div>
         </div>
+        <div class="right-image-post">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="left-text">
+                <h4>AGN Chemical Abundances</h4>
+                <p>
+                  I study the relationships between nebular emission lines,
+                  chemical abundances, and physical properties like temperature
+                  and density in active galactic nuclei (AGN). Currently, I collaborate with
+                  <a href="https://bv.fapesp.br/en/pesquisador/32467/oli-luiz-dors-junior">Oli Dors</a>
+                  and others on the abundance patterns in nearby Seyfert galaxies,
+                  including the temperature structure of the AGN narrow-line region
+                  and possible effects of shocks. To the right, I show BPT-VO flux ratio
+                  predictions based solely on chemical abundances and ion fractions for both AGN and star-forming galaxies
+                  (no photoionization models involved).
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="right-image">
+                <img src="assets/images/bpt_abunds.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       </section>
     </div>
 
